--- a/homework/02.markdown
+++ b/homework/02.markdown
@@ -7,7 +7,7 @@ title: CSCI-UA.0480 - Homework #2
   <div class="panel-heading">Homework #2</div>
   <div class="panel-body" markdown="block">
 
-# Higher Order Functions: Exercises and Processing Data - __Due Sunday, September 23rd, by 11PM__
+# Higher Order Functions: Exercises and Processing Data - __Due Mon, Sep 24th (extended from Sun, Sep 23rd), by 11PM__
 
 <div markdown="block" class="img">
 ![dog](../resources/img/dog.gif)
