--- a/homework/03.markdown
+++ b/homework/03.markdown
@@ -53,10 +53,10 @@ You will be given access to a private repository on GitHub. It will contain:
 1. stub source files in the `src` directory (`app.js` and `webby.js`)
 2. some images you can use for testing in the `public/img` folder
 3. unit tests in `test`
-4. linting files `.eslintrc`, etc.
-5. __you'll have to create your own `package.json`, `package-lock.json`, `.gitignore`__
+4. __you'll have to create your own `package.json`, `package-lock.json`, `.gitignore`__
     * (these are required and part of grading)
     * remember to put `node_modules` in your `.gitignore`
+5. copy over your linting configuration `.eslintrc.js` from homework 02
 
 __Push__ your code to the homework repository on GitHub. Repositories will close, so make sure you push your changes before the deadline.
 
