--- a/homework/04.markdown
+++ b/homework/04.markdown
@@ -17,7 +17,7 @@ h1.warning {
 
 ⚠️⚠️⚠️NO GRACE PERIOD⚠️⚠️⚠️
 
-Extended due .
+Extended due {{HOMEWORK_04}}.
 
 ## Overview
 
@@ -142,9 +142,6 @@ Here's an example of what the page could look like (you don't have to use the sa
 
 The homepage should also have a list of all of the artworks submitted to the site. By default, this list will start with the following content:
 
-* G - The person sitting next to me was eating hard-boiled eggs in the subway car (???!!!)
-
-
 
 01.
 ```
@@ -208,7 +205,7 @@ f
     * followed by the contents of the request's query string
 	* followed by the contents of the request __body__
 
-###  Complaint List
+### Artwork List
 
 Now for some actual content. This page will display the artworks and the tags associated with the artwork.
 
@@ -217,7 +214,7 @@ __Bootstrap the list with some data.__
 * store all of the artwork data in a global Array of objects...
 * each object has four properties:
   * the title
-  * the date (as a YEAR-MM-DD string)
+  * the date (as a YYYY-MM-DD string)
 	* the _actual_ artwork (just strings).
     * hint: use \`\` string templates to have strings with newlines in your code.
       * warning: the "\" needs to be escaped using itself if you do things this way i.e. "\\" whenever you mean "\"
@@ -249,7 +246,7 @@ __Test your page.__
 <img src="../resources/img/NEED_LOOK_LIKE.png">
 </div>
 
-###  Filter by Subway Line
+###  Filter by Artwork Tag
 
 __Once you have your list of artworks working... add a form that allows you to filter by tags.__ &rarr;
 
@@ -307,7 +304,7 @@ req.body: {}
 	* in your callback function for this route...
 	* create an object for this new artwork (with the actual artwork text and the tags) and add it to your global list of artwork objects
 	* ...after that, redirect to home <code>/</code> with a <code>GET</code> request
-* __here's what the filter interaction should look like:__
+* __here's what the add interaction should look like:__
 
 
 <div markdown="block" class="img">
