--- a/homework/04.markdown
+++ b/homework/04.markdown
@@ -3,21 +3,17 @@ layout: homework
 title: CSCI-UA.0480 - Homework #4
 ---
 
-<div class="panel panel-default">
-	<div class="panel-heading">Homework #4</div>
-	<div class="panel-body" markdown="block">
-
 <style>
 h1.warning {
 	background-color: #eaa;
 }
 </style>
+<div class="panel panel-default">
+	<div class="panel-heading">Homework #3</div>
+	<div class="panel-body" markdown="block">
 
-# Creating a Tiny Web Framework, Due __{{ hw4.due_date }} by 11PM__
+# ASCII ART DIARYYY, Due __10/16 by 11PM__
 
-⚠️⚠️⚠️NO GRACE PERIOD⚠️⚠️⚠️
-
-Extended due {{HOMEWORK_04}}.
 
 ## Overview
 
@@ -62,7 +58,6 @@ You'll be creating 2 pages:
 * __install__ the following __dependencies__ (make sure you use the <code>--save</code> option), and __no others__:
 	* <code>express</code>
 	* <code>hbs</code>
-	* <code>express-session</code>
 
 
 ###  .gitignore
@@ -77,7 +72,7 @@ You'll be creating 2 pages:
 
 ### linting
 
-* an eslint configuration file (for example `.eslintrc.json`) should be in the root directory
+* an eslint configuration file (for example `.eslintrc.json`) should be in the root directory (or copy one from a previous project if it doesn't exist)
 * make sure that any global linting tools are installed (`eslint`)
 * periodically lint your program as you work
 
@@ -97,7 +92,6 @@ First, let's make sure you can serve up static content, like css and images.
 	* make sure that your application is __served over port 3000__
 * just add the appropriate requires and middleware to enable static file serving:
 	* check out the [slides on serving static files with Express](../slides/08/express.html#/29)
-	* or see page 26 in Chapter 3 of {{ site.book_web }}
 * test that both the css files and image work
 	* for example, try to curl <code>http://localhost:3000/img/logo.png</code>
 	* or go that url in your browser
@@ -196,8 +190,8 @@ These artworks can be filtered so that your application only shows artworks for 
 ###  Middleware and Logging
 
 First, get some logging together so that you can troubleshoot. Log out the request that you receive, including the request's query string and body.
-f
-* require the <code>body-parser</code> middleware and use it; this will allow you to access the content of the request's body
+
+* require the <code>body-parser</code> (aka `express.urlencoded`) middleware and use it; this will allow you to access the content of the request's body
 * set up some logging using your own middleware function; it should include
 	* the request __method__,  __path__
     * followed by the contents of the request's query string
@@ -213,10 +207,9 @@ __Bootstrap the list with some data.__
 * each object has four properties:
   * the title
   * the date (as a YYYY-MM-DD string)
-	* the _actual_ artwork (just strings).
-    * hint: use \`\` string templates to have strings with newlines in your code.
-      * warning: the "\" needs to be escaped using itself if you do things this way i.e. "\\" whenever you mean "\"
-	* the tags
+  * the _actual_ artwork (just strings).
+  * hint: use \`\` string templates to have strings with newlines in your code.
+    * warning: the "\" needs to be escaped using itself if you do things this way i.e. "\\" whenever you mean "\"
 * it should start off with three artworks of your choice or doing (you can copy the ones above if you feel like it)
 * (storing this data in a global variable isn't typical, of course, but we'll have to store the data _somewhere_ for now!)
 
@@ -228,10 +221,11 @@ __Create the actual page...__
 
 * modify your route for your home page (<code>/</code>) so that you render the template with the correct context object (that is, the list of artworks to display)
 * in the template, you can iterate through the list of artworks using the <code>#each</code> helper
-* HINT: the <pre> tag is for monospaced (ascii art) texted
+	* HINT: use the <pre> tag is for monospaced (ascii art) 
 * __display the artworks in reverse order__ - the last element on the list should be on top
 * put each artwork + metadata entry in a list item (<code>li</code>)
 * for each artwork, display all tags as links that will filter the artworks to only that tag
+	* you'll have to come back to this later as you add the ability to _actually_ filter in the next part
 * additionally, make the tags a different style (such as a different font-weight or background-color or ... anything you want)
 
 __Test your page.__
@@ -252,13 +246,14 @@ __Once you have your list of artworks working... add a form that allows you to f
     * the form should issue a <code>GET</code> request
     * the request should go to the same URL that it's on (still home, <code>/</code>)
     * the form should also have a text field and a submit button
-    * __remember to give you text field a name!__
+    * __name your text input: `tag`__
 * on the server side, modify your route for your home page (<code>/</code>) so that it sends filtered data if the form is submitted
     * how does your route know if the form was submitted?
     * how does the route extract the data from the <code>GET</code> request / form submission?
     * find some way to filter the data
     * send that data to the template
     * if the filter submitted is blank or if there is no filter, display all of the artworks
+* go back and modify the tag links in your template for `/` so each has an appropriate link to filter the artworks WITHOUT having to submit a form
 * __here's what the filter interaction should look like:__
 
 <div markdown="block" class="img">
