--- a/homework/07.markdown
+++ b/homework/07.markdown
@@ -7,7 +7,7 @@ title: CSCI-UA.0480 - Homework #7
 	<div class="panel-heading">Homework #7</div>
 	<div class="panel-body" markdown="block">
 
-# Forest Simulator (Client Side JavaScript) - __Due {HW_07_DUEDATE}__
+# Forest Simulator (Client Side JavaScript) - __Due 11/26 at 11pm__
 
 ## Overview
 
@@ -21,9 +21,9 @@ You'll be using the following concepts:
 
 ### Description
 
-There's a twitter bot that just [tweets emoji forests](https://twitter.com/tiny_forests). As you can see, it basically just creates multiline strings using characters from some set of forest-related emoji. But it makes people happy so what's the difference.
+There's a twitter bot that just [tweets emoji forests](https://twitter.com/tiny_forests). As you can see, it basically just creates multiline strings using characters from some set of forest-related emoji. But it makes people happy, so what's the difference? 🤷
 
-A big part of poetry/art/fun with code is curation. You will be making an interface of this twitter bot using pure clientside javascript where you can curate some parts of the forest, but also allow randomness to generate other parts. The interface will then compute the biodiversity of your forest in realtime using [Simpson's index](https://en.wikipedia.org/wiki/Diversity_index#Simpson_index) so you can see how sickly your forest is as you are generating it.
+A big part of poetry/art/fun with code is curation. You will be making an interface that creates forests similar to the one that this twitter bot generates by using pure clientside javascript where you can curate some parts of the forest, but also allow randomness to generate other parts. The interface will then compute the biodiversity of your forest in realtime using [Simpson's index](https://en.wikipedia.org/wiki/Diversity_index#Simpson_index) so you can see how sickly your forest is as you are generating it.
 
 
 <img src="../resources/img/hw07-forest-01-main.gif">
@@ -112,7 +112,7 @@ __Pressing "generate" reveals the simulation screen and sets predefined forest l
     * <code>document.querySelector</code> will also be very useful - see the [docs](https://developer.mozilla.org/en-US/docs/Web/API/Document/querySelector) or [slides](slides/19/js-css.html)!
     * Create and apply the appropriate classes to get rid of the _title screen_ (do this with styles, there's no need to remove the element) and show the _sim screen_
 * Note that there's a form field in the _title screen_ ...
-    * This field will allow the player to manuall set the emoji forest in the sim (it's kind of like cheating / playing Intelligent Creator, but it's really for making it easier to test)
+    * This field will allow the player to manually set the emoji forest in the sim (it's kind of like cheating / playing Intelligent Creator, but it's really for making it easier to test)
     * If the player enters a value in this field, then the forest  will be set to the sequence inputted
     * The input should be a multiline string of forest emojis
     * No validation is required (assume that the user puts in valid input or no input)
@@ -120,31 +120,29 @@ __Pressing "generate" reveals the simulation screen and sets predefined forest l
     * If there's nothing in the field, then forest should be completely random
     * To implement this behavior, see below ...
 * Create a function or object that generates an 8x8 forest
-    * You'll use this any time a forest is needed for the player or the computer
+    * You'll use this any time a new forest is needed 
     * Again, the emoji forest should initially be random ...
     * However, the function or object should be _configurable_ so that it can draw emojis from the list of emojis entered
     * (Use whatever mechanism you like to do this - perhaps storing the list in a closure or in a property in the function or constructor... or just a plain old global)
     * the function should output an array of 8 strings, where each string is 8 emojis (or spaces) long
-* Here's an example of how it may work (again, the sim screen_ will be blank for now, but when it's implemented, it should function like this):
+* Here's an example of how it may work (again, the sim screen will be blank for now, but when it's implemented, it should function like this):
     <img src="../resources/img/hw07-forest-03-genagain.gif">
     <br>
 
 
-__Generate DOM elements for the lines of forest, the biodiversity emtric, and 3 buttons__
+__Generate DOM elements for the lines of forest, the biodiversity metric, and 3 buttons__
 
 * Create DOM elements to show Simpson's Index
     * use this function
-        <pre><code data-trim contenteditable>
-
-            const simpsonsIndex = forest =>
-              1 - Object.entries(
-                [...forest.join("")].reduce(
-                  (counts, emoji) => ({...counts, [emoji]: (counts[emoji] || 0) + 1}),
-                  {}
-                )
-              ).reduce(([top, bottom], [species, count]) => [top + (count * (count - 1)), bottom + count], [0, 0])
-              .reduce((sumLilN,bigN) => sumLilN / (bigN * (bigN - 1)))
-        </code></pre>
+        <pre><code data-trim contenteditable>const simpsonsIndex = forest =>
+	1 - Object.entries(
+		[...forest.join("")].reduce(
+			(counts, emoji) => ({...counts, [emoji]: (counts[emoji] || 0) + 1}),
+			{}
+		)
+	).reduce(([top, bottom], [species, count]) => [top + (count * (count - 1)), bottom + count], [0, 0])
+	.reduce((sumLilN,bigN) => sumLilN / (bigN * (bigN - 1)))
+</code></pre>
     which takes one argument in the form of an array of emoji strings to output the Simpson's Index biodiversity estimate for the forest at hand
 
 * Create DOM elements to show the 8 rows of forest
@@ -156,8 +154,8 @@ __Generate DOM elements for the lines of forest, the biodiversity emtric, and 3 
     <br>
     <img src="../resources/img/hw07-forest-04-button.gif">
 
-__Selecting rows to pin__
-* add onclick handlers to all of the rows so that when clicked, it toggled between a pinned and unpined state
+__Selecting rows to pin / save__
+* add onclick handlers to all of the rows so that when clicked, it toggles between a _pinned_ and _unpinned_ state
 * make sure that the state change is visually reflected somehow, such as with a change in background color (for just that row of the forest)
 
 __Pressing the generate button__
@@ -165,7 +163,7 @@ __Pressing the generate button__
 * Add an onclick handler to the generate button so that
     * it finds all of the rows that aren't pinned
     * it replaces the contents of those rows with new randomized forest strings
-    * it recalcuates and re-diplay of the Simpson's Index
+    * it recalculates and redisplays the Simpson's Index
 * Everything together should look like:
     <br>
     <img src="../resources/img/hw07-forest-05-pinned.gif">
@@ -173,7 +171,7 @@ __Pressing the generate button__
 
 __Omnious alerts__
 
-Let's implement push notifications for when the biodiversity index drops below 0.7. Or more specifically
+Let's implement push-_like_ notifications for when the biodiversity index drops below 0.7. Or more specifically
 1. when `generate` is clicked and calculates a new index, the index should be checked to see if it is higher than 0.7
 2. if not, add another div to the #pushtray element
 
